third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/try_transmute_mut-src-not-intobytes.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> tests/ui-msrv/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Src`
   |
note: required by `AssertSrcIsIntoBytes`
  --> tests/ui-msrv/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> tests/ui-msrv/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Src`
   |
note: required by a bound in `AssertSrcIsIntoBytes`
  --> tests/ui-msrv/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
  --> tests/ui-msrv/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `Dst`
   |
note: required by `AssertDstIsFromBytes`
  --> tests/ui-msrv/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Dst: IntoBytes` is not satisfied
  --> tests/ui-msrv/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `Dst`
   |
note: required by `AssertDstIsIntoBytes`
  --> tests/ui-msrv/try_transmute_mut-src-not-intobytes.rs:23:40
   |
23 |     let src_not_from_bytes: &mut Dst = transmute_mut!(&mut Src);
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
